--- a/.github/workflows/build-base-image.yml
+++ b/.github/workflows/build-base-image.yml
@@ -1,5 +1,6 @@
-#
 name: Create and publish a Docker image
+
+on: workflow_dispatch
 
 # Configures this workflow to run every time a change is pushed to the branch called `release`.
 on:
