Update tag name

--- a/.github/workflows/build-base-image-cpu.yml
+++ b/.github/workflows/build-base-image-cpu.yml
@@ -52,7 +52,7 @@ jobs:
           context: .
           file: ./Dockerfile-base-cpu
           push: true
-          tags: ghcr.io/fact0rn/sieverdispersion:sieverdispersion-cpu
+          tags: ghcr.io/fact0rn/sieverdispersion:sieverdispersion-base-cpu
           labels: ${{ steps.meta.outputs.labels }}
 
       # This step generates an artifact attestation for the image, which is an unforgeable statement about where and how it was built. It increases supply chain security for people who consume the image. For more information, see "[AUTOTITLE](/actions/security-guides/using-artifact-attestations-to-establish-provenance-for-builds)." 
