--- a/Dockerfile-base-gpu
+++ b/Dockerfile-base-gpu
@@ -24,6 +24,9 @@ RUN update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-14 14 && \
     update-alternatives --set c++ /usr/bin/g++                        && \
     update-alternatives --set cc  /usr/bin/gcc
 
+RUN pip3 install --break-system-packages --upgrade pip && \
+    pip3 install --break-system-packages nvidia-ml-py3
+
 # Set working directory
 WORKDIR /tmp
 
