Dockerfile-gpu: Switch to local base image for now

--- a/Dockerfile-gpu
+++ b/Dockerfile-gpu
@@ -1,4 +1,5 @@
-FROM ghcr.io/fact0rn/sieverdispersion:sieverdispersion-base-gpu
+# FROM ghcr.io/fact0rn/sieverdispersion:sieverdispersion-base-gpu
+FROM sieverdispersion-base-gpu
 
 COPY . /tmp/SieverDispersion
 
