--- a/Dockerfile-base-cpu
+++ b/Dockerfile-base-cpu
@@ -14,6 +14,7 @@ RUN apt update &&                                             \
     make                                                      \
     curl                                                      \
     python3-full                                              \
+    python3-pip                                               \
     python3-psutil                                            \
     python3-requests                                          \
     python3-gmpy2
