--- a/Dockerfile-base-gpu
+++ b/Dockerfile-base-gpu
@@ -13,6 +13,7 @@ RUN apt update &&                                             \
     make                                                      \
     curl                                                      \
     python3-full                                              \
+    python3-pip                                               \
     python3-psutil                                            \
     python3-requests                                          \
     python3-gmpy2
