--- a/Dockerfile-base-cpu
+++ b/Dockerfile-base-cpu
@@ -13,6 +13,7 @@ RUN apt update &&                                             \
     libgmp-dev                                                \
     make                                                      \
     curl                                                      \
+    expect                                                    \
     python3-full                                              \
     python3-pip                                               \
     python3-psutil                                            \
