Switch to GitHub-built base images

--- a/Dockerfile-cpu
+++ b/Dockerfile-cpu
@@ -1,5 +1,5 @@
-# FROM ghcr.io/fact0rn/sieverdispersion:sieverdispersion-base-cpu
-FROM sieverdispersion-base-cpu
+FROM ghcr.io/fact0rn/sieverdispersion:sieverdispersion-base-cpu
+# FROM sieverdispersion-base-cpu
 
 COPY . /tmp/SieverDispersion
 
