--- a/Dockerfile-gpu
+++ b/Dockerfile-gpu
@@ -1,5 +1,5 @@
-# FROM ghcr.io/fact0rn/sieverdispersion:sieverdispersion-base-gpu
-FROM sieverdispersion-base-gpu
+FROM ghcr.io/fact0rn/sieverdispersion:sieverdispersion-base-gpu
+# FROM sieverdispersion-base-gpu
 
 COPY . /tmp/SieverDispersion
 
