--- a/files/yafu.ini
+++ b/files/yafu.ini
@@ -287,7 +287,7 @@ B1ecm=11000
 %ecm_path=..\gmp-ecm\bin\x64\Release\ecm.exe
 %ecm_path=../gmp-ecm/install/mingw/bin/ecm.exe
 %ecm_path=../gmp-ecm/bin/ecm
-ecm_path=/tmp/gmp-ecm/ecm
+ecm_path=../trosi_ecm_git/ecm
 
 % Use this to use gmp-ecm instead of avx-ecm when avx-ecm available
 % prefer_gmpecm
@@ -300,7 +300,7 @@ ecm_path=/tmp/gmp-ecm/ecm
 
 % crossover to use the external ECM executable over the internally linked
 % ECM (or avx-ecm)
-ext_ecm=0
+ext_ecm=1000000000
 
 % specify a particular curve using sigma.  For avx-ecm, this specifies the
 % starting sigma for the first vector position.  Other lanes increment this value.
