--- a/.github/workflows/build-baremetal-cpu.yml
+++ b/.github/workflows/build-baremetal-cpu.yml
@@ -32,7 +32,7 @@ jobs:
             while (true) {
               const workflows = await github.rest.actions.listWorkflowRuns({
                 owner: context.repo.owner,
-                repo: context.repo.name,
+                repo: context.repo.repo,
                 workflow_id: "build-base-image-cpu.yml",
                 branch: "main",
                 per_page: 1
