--- a/.github/workflows/build-baremetal-cpu.yml
+++ b/.github/workflows/build-baremetal-cpu.yml
@@ -88,6 +88,12 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.12"
+          cache: "pip"
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -101,12 +107,6 @@ jobs:
           image: "ghcr.io/fact0rn/sieverdispersion:sieverdispersion-base-cpu"
           path: "/tmp/bin"
           destination: "./dist/bin"
-
-      - name: Install Python dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y python3-full python3-pip python3-psutil python3-requests python3-gmpy2
-          sudo pip3 install --break-system-packages paho-mqtt>=2.0
 
       - uses: Nuitka/Nuitka-Action@main
         with:
