--- a/Dockerfile-base-gpu
+++ b/Dockerfile-base-gpu
@@ -39,7 +39,7 @@ RUN cd /tmp &&                                                         \
     cd gmp-ecm &&                                                      \
     git checkout fc77ff78da7606afe6be80111a83fe397632927c &&           \
     autoreconf -fiv &&                                                 \
-    CC=gcc CXX=g++ ./configure &&                                      \
+    CC=gcc CXX=g++ ./configure --with-gmp-lib=/usr/lib/x86_64-linux-gnu --enable-static --disable-shared && \
     make -j $(nproc) &&                                                \
     make install &&                                                    \
     cp ecm /tmp/bin
@@ -71,6 +71,7 @@ RUN cd /tmp &&                                                         \
     git clone https://github.com/bbuhrow/yafu.git &&                   \
     cd yafu &&                                                         \
     git checkout ee519b24b302018b55e945caba0e23298c55ee66 &&           \
+    sed -i 's:-lgmp:/usr/lib/x86_64-linux-gnu/libgmp.a:g' Makefile &&  \
     cp -av /tmp/yafu /tmp/yafu-avx512 &&                               \
     make yafu -j $(nproc) NFS=1 USE_SSE41=1 USE_AVX2=1 USE_BMI2=1 CC="gcc -Wno-return-mismatch -Wno-incompatible-pointer-types -Wno-implicit-function-declaration" && \
     cp yafu /tmp/bin &&                                                \
