Bootstrap sieverdispersion-gpu-ubuntu22.04

--- a/.github/workflows/build-base-image-gpu-ubuntu22.04.yml
+++ b/.github/workflows/build-base-image-gpu-ubuntu22.04.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
+      - unstable
     paths:
       - 'Dockerfile-base-gpu-ubuntu22.04'
       - 'files/yafu.ini'
