Revert "Bootstrap sieverdispersion-gpu-ubuntu22.04"
This reverts commit 6279d4982acf266a060b2a1beef41dbeedf69f68.

--- a/.github/workflows/build-base-image-gpu-ubuntu22.04.yml
+++ b/.github/workflows/build-base-image-gpu-ubuntu22.04.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - unstable
+      - main
     paths:
       - 'Dockerfile-base-gpu-ubuntu22.04'
       - 'files/yafu.ini'
