--- a/Dockerfile-base-cpu
+++ b/Dockerfile-base-cpu
@@ -2,6 +2,7 @@
 FROM ubuntu:24.04
 
 # Install needed packages
+ARG DEBIAN_FRONTEND=noninteractive
 RUN apt update &&                                             \
     apt full-upgrade -y &&                                    \
     apt install -y                                            \
