--- a/Dockerfile-base-gpu-ubuntu22.04
+++ b/Dockerfile-base-gpu-ubuntu22.04
@@ -1,6 +1,7 @@
 FROM nvidia/cuda:12.6.2-runtime-ubuntu22.04
 
 # Install needed packages
+ARG DEBIAN_FRONTEND=noninteractive
 RUN apt update &&                                             \
     apt full-upgrade -y &&                                    \
     apt install -y                                            \
