--- a/.github/workflows/build-baremetal-ubuntu22.04.yml
+++ b/.github/workflows/build-baremetal-ubuntu22.04.yml
@@ -1,4 +1,4 @@
-name: Build sieverdispersion-baremetal
+name: Build sieverdispersion-baremetal-ubuntu22.04
 
 on:
   workflow_dispatch:
@@ -33,7 +33,7 @@ jobs:
               const workflows = await github.rest.actions.listWorkflowRuns({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                workflow_id: "build-base-image-gpu.yml",
+                workflow_id: "build-base-image-gpu-ubuntu22.04.yml",
                 branch: "main",
                 per_page: 1
               });
@@ -104,7 +104,7 @@ jobs:
 
       - uses: shrink/actions-docker-extract@f97780187d59e88f06a98b166a7e700c0f400314
         with:
-          image: "ghcr.io/fact0rn/sieverdispersion:sieverdispersion-base-gpu"
+          image: "ghcr.io/fact0rn/sieverdispersion:sieverdispersion-base-gpu-ubuntu22.04"
           path: "/tmp/bin/."
           destination: "./dist/SieverDispersion-baremetal/bin"
 
@@ -124,21 +124,21 @@ jobs:
 
       - name: Build release tarball
         run: |
-          tar czvf SieverDispersion-baremetal-ubuntu24.04.tar.gz -C dist .
+          tar czvf SieverDispersion-baremetal-ubuntu22.04.tar.gz -C dist .
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         with:
-          subject-path: SieverDispersion-baremetal-ubuntu24.04.tar.gz
+          subject-path: SieverDispersion-baremetal-ubuntu22.04.tar.gz
 
       - name: Upload release tarball
         uses: actions/upload-artifact@v4
         with:
-          name: SieverDispersion-baremetal-ubuntu24.04
+          name: SieverDispersion-baremetal-ubuntu22.04
           path: dist/*
 
       - name: Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: SieverDispersion-baremetal-ubuntu24.04.tar.gz
+          files: SieverDispersion-baremetal-ubuntu22.04.tar.gz
