--- a/.github/workflows/build-baremetal.yml
+++ b/.github/workflows/build-baremetal.yml
@@ -119,7 +119,7 @@ jobs:
           ls -al build/*
           mv build/SieverDispersion dist/SieverDispersion-baremetal
           git rev-parse HEAD > dist/SieverDispersion-baremetal/GIT_VERSION
-          cp maybeGenerateMachineID.sh files/{CPU,GPU}MinerStart.sh dist/SieverDispersion-baremetal
+          cp maybeGenerateMachineID.py files/{CPU,GPU}MinerStart.sh dist/SieverDispersion-baremetal
 
       - name: Build release tarball
         run: |
