Bare metal miner CI: Fix .gitkeep not getting packed

--- a/.github/workflows/build-baremetal.yml
+++ b/.github/workflows/build-baremetal.yml
@@ -137,6 +137,7 @@ jobs:
         with:
           name: SieverDispersion-baremetal-ubuntu24.04
           path: dist/*
+          include-hidden-files: true
 
       - name: Release
         uses: softprops/action-gh-release@v2
