--- a/.github/workflows/build-baremetal-ubuntu22.04.yml
+++ b/.github/workflows/build-baremetal-ubuntu22.04.yml
@@ -137,6 +137,7 @@ jobs:
         with:
           name: SieverDispersion-baremetal-ubuntu22.04
           path: dist/*
+          include-hidden-files: true
 
       - name: Release
         uses: softprops/action-gh-release@v2
