--- a/.github/workflows/build-baremetal-ubuntu22.04.yml
+++ b/.github/workflows/build-baremetal-ubuntu22.04.yml
@@ -123,16 +123,13 @@ jobs:
           mkdir dist/SieverDispersion-baremetal/machineIDs
           touch dist/SieverDispersion-baremetal/machineIDs/.gitkeep
 
-      - name: Build release tarball
-        run: |
-          tar czvf SieverDispersion-baremetal-ubuntu22.04.tar.gz -C dist .
-
       - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v1
+        uses: actions/attest-build-provenance@v2
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          subject-path: SieverDispersion-baremetal-ubuntu22.04.tar.gz
+          subject-path: dist/SieverDispersion-baremetal/SieverDispersion
 
-      - name: Upload release tarball
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: SieverDispersion-baremetal-ubuntu22.04
